--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -14,6 +14,15 @@ Anspruch:
     GA 29/30:
     - start: 429
     - start: 428
+    SvG:
+    - start: 177
+    - start: 180
+    - start: 181
+    - start: 183
+    - start: 187
+    - start: 188
+  related:
+  - Zuspruch
 Anthropologie:
   references:
     GA 29/30:
@@ -86,12 +95,22 @@ Atomenergie:
     GA 16:
     - end: 524
       start: 523
+    SvG:
+    - start: 179
+    - start: 180
+    - start: 181
+    - start: 182
+    - start: 188
 Atomzeitalter:
   references:
     GA 16:
     - start: 522
     - end: 524
       start: 523
+    SvG:
+    - start: 178
+    - start: 179
+    - start: 189
 Augenblick:
   references:
     GA 29/30:
@@ -169,6 +188,10 @@ Benommenheit, Offenheit der:
       type: r
     - start: 370
       type: r
+Bestand:
+  references:
+    SvG:
+    - start: 182
 Bewegtheit:
   references:
     WBPh:
@@ -257,6 +280,12 @@ Dasein des Menschen:
     - end: 13
       start: 10
       type: r
+    SvG:
+    - start: 179
+Dasein des menschen:
+  references:
+    SvG:
+    - start: 189
 Dasein im Menschen:
   parent: Dasein
   references:
@@ -310,6 +339,10 @@ Descartes, René:
     SvG:
     - start: 174
   type: p
+Dichter:
+  references:
+    SvG:
+    - start: 185
 Dionysos:
   references:
     WD:
@@ -336,6 +369,11 @@ Endlichkeit des Daseins:
   references:
     GA 29/30:
     - start: 252
+Energie:
+  references:
+    SvG:
+    - start: 178
+    - start: 180
 Entbergen:
   references:
     GA 29/30:
@@ -357,6 +395,10 @@ Entschlossenheit:
   references:
     GA 29/30:
     - start: 251
+Erde:
+  references:
+    SvG:
+    - start: 189
 Ergriffenheit:
   references:
     GA 29/30:
@@ -386,6 +428,10 @@ Fehl Gottes:
   references:
     WD:
     - start: 269
+Forschung:
+  references:
+    SvG:
+    - start: 185
 Frage nach dem Sein:
   references:
     GA 29/30:
@@ -425,6 +471,11 @@ Fragment 93 (Heraklit):
     WBPh:
     - start: 277
   type: w
+Franz Joseph Strauß:
+  references:
+    SvG:
+    - start: 178
+  type: p
 Franz Suarez:
   references:
     GA 29/30:
@@ -448,6 +499,10 @@ Gedankenlosigkeit:
     GA 16:
     - end: 519
       start: 518
+Gefahr:
+  references:
+    SvG:
+    - start: 177
 Gegenstand:
   references:
     GA 16:
@@ -455,6 +510,9 @@ Gegenstand:
     SvG:
     - start: 174
     - start: 175
+    - start: 176
+    - start: 177
+    - start: 182
 Gegnet:
   references:
     GA 55:
@@ -528,12 +586,23 @@ Gleichgültigkeit:
     GA 29/30:
     - start: 367
       type: r
+Goethe, Johann Wolfgang von:
+  references:
+    SvG:
+    - start: 181
+    - start: 185
+    - start: 188
+  type: p
 Gott:
   references:
     GA 29/30:
     - start: 262
     WD:
     - start: 270
+Großrechenanlage:
+  references:
+    SvG:
+    - start: 182
 Grund:
   references:
     SvG:
@@ -542,6 +611,15 @@ Grund:
     - start: 173
     - start: 174
     - start: 175
+    - start: 176
+    - start: 181
+    - start: 183
+    - start: 182
+    - start: 184
+    - start: 186
+    - start: 187
+    - start: 188
+    - start: 189
     WD:
     - end: 270
       start: 269
@@ -563,8 +641,15 @@ Grundsatz:
     - start: 171
     - start: 172
     - start: 173
+    - start: 177
+    - start: 181
+    - start: 183
+    - start: 182
+    - start: 184
+    - start: 188
   related:
   - Satz vom Grund
+  - Axiom
 Grundstimmung:
   parent: Stimmung
   references:
@@ -641,6 +726,14 @@ Hergestelltheit:
     WBPh:
     - start: 248
       suffix: f
+Herrschaft:
+  references:
+    SvG:
+    - start: 181
+Herrschaft des Menschen:
+  references:
+    SvG:
+    - start: 182
 Herstellen:
   references:
     WBPh:
@@ -681,6 +774,10 @@ Inbegrif:
   references:
     GA 29/30:
     - start: 13
+Information:
+  references:
+    SvG:
+    - start: 182
 Kant und das Problem der Metaphysik:
   references:
     GA 29/30:
@@ -749,6 +846,9 @@ Leibniz, Gottfried Wilhelm:
     SvG:
     - end: 175
       start: 172
+    - start: 176
+    - start: 182
+    - start: 184
   related:
   - Satz vom Grund
   - principium rationis
@@ -769,6 +869,13 @@ Maschine:
   references:
     EWI:
     - start: 35
+    SvG:
+    - start: 179
+Materialismus:
+  references:
+    SvG:
+    - start: 179
+    - start: 180
 Meister Eckhart:
   references:
     GA 42:
@@ -797,6 +904,8 @@ Metaphysik:
       start: 6
     - end: 13
       start: 9
+    SvG:
+    - start: 184
 Miteinandersein:
   references:
     GA 29/30:
@@ -848,6 +957,8 @@ Natur:
     GA 29/30:
     - end: 404
       start: 402
+    SvG:
+    - start: 178
     WBPh:
     - end: 241
       start: 237
@@ -860,10 +971,16 @@ Natur:
     - start: 60
   related:
   - natura
+Naturwissenschaft:
+  references:
+    SvG:
+    - start: 180
 Neuzeit:
   references:
     GA 16:
     - start: 523
+    SvG:
+    - start: 177
 Nichts:
   references:
     GA 29/30:
@@ -895,6 +1012,8 @@ Novalis:
   type: p
 Objekt:
   references:
+    SvG:
+    - start: 175
     WBPh:
     - start: 249
 Offenbarkeit des Seienden im Ganze:
@@ -903,6 +1022,11 @@ Offenbarkeit des Seienden im Ganze:
     - end: 413
       start: 412
     - start: 415
+Otto Hahn:
+  references:
+    SvG:
+    - start: 178
+  type: p
 Pascal, Blaise:
   references:
     GA 42:
@@ -974,10 +1098,17 @@ Plato:
     WBPh:
     - start: 299
   type: p
+Princip:
+  references:
+    SvG:
+    - start: 176
 Prinzip:
   references:
     SvG:
     - start: 174
+  related:
+  - Axiom
+  - Grundsatz
 Rand der Möglichkeit:
   references:
     GA 29/30:
@@ -986,6 +1117,8 @@ Rechenschaft:
   references:
     SvG:
     - start: 175
+    - start: 176
+    - start: 189
 Reizbarkeit:
   references:
     GA 29/30:
@@ -1013,6 +1146,12 @@ Satz vom Grund:
     - start: 172
     - start: 173
     - start: 175
+    - start: 177
+    - start: 178
+    - start: 183
+    - start: 184
+    - start: 187
+    - start: 188
 Schein:
   references:
     WBPh:
@@ -1125,6 +1264,10 @@ Stimmung:
       start: 409
     - end: 10
       start: 9
+Subjekt:
+  references:
+    SvG:
+    - start: 175
 Symbol:
   references:
     GA 29/30:
@@ -1142,6 +1285,14 @@ Technik:
       start: 523
     GA 42:
     - start: 55
+    SvG:
+    - start: 177
+    - start: 180
+    - start: 181
+Technologie:
+  references:
+    SvG:
+    - start: 179
 Thomas van Aquin:
   references:
     GA 29/30:
@@ -1163,6 +1314,8 @@ Tod:
     GA 29/30:
     - end: 426
       start: 425
+    SvG:
+    - start: 188
 Tranzendenz:
   references:
     GA 29/30:
@@ -1225,6 +1378,10 @@ Vernehmen:
     - start: 454
       suffix: ff
     - start: 487
+Vernunft:
+  references:
+    SvG:
+    - start: 176
 Verwahrlosung:
   references:
     EWI:
@@ -1256,6 +1413,10 @@ Vorstellen:
     - start: 171
     - start: 172
     - start: 174
+    - start: 176
+    - start: 177
+    - start: 183
+    - start: 188
 Wachsen:
   references:
     WBPh:
@@ -1264,6 +1425,18 @@ Wahrheit:
   references:
     SvG:
     - start: 173
+Warum:
+  references:
+    SvG:
+    - start: 185
+    - start: 186
+  related:
+  - Weil
+Weil:
+  references:
+    SvG:
+    - start: 186
+    - start: 185
 Welt:
   references:
     GA 29/30:
@@ -1291,6 +1464,10 @@ Weltbildung:
     - end: 414
       start: 413
     - start: 419
+Weltgeschichte:
+  references:
+    SvG:
+    - start: 180
 Weltnacht:
   references:
     WD:
@@ -1334,6 +1511,9 @@ Wissenschaft:
   references:
     GA 16:
     - start: 523
+    SvG:
+    - start: 181
+    - start: 185
 Wissenschaft der Logik:
   author: Hegel, Georg Wilhelm Friedrich
   references:
@@ -1345,6 +1525,11 @@ Wort:
     GA 29/30:
     - end: 447
       start: 446
+Zeitalter:
+  references:
+    SvG:
+    - start: 180
+    - start: 187
 Zeitlichkeit des Daseins:
   references:
     GA 29/30:
@@ -1353,6 +1538,12 @@ Zugänglichkeit des Seienden:
   references:
     GA 29/30:
     - start: 412
+Zuspruch:
+  references:
+    SvG:
+    - start: 183
+    - start: 187
+    - start: 188
 actualitas:
   references:
     WBPh:
@@ -1380,6 +1571,8 @@ animal rationale:
   references:
     GA 29/30:
     - start: 442
+    SvG:
+    - start: 189
 antiken Ontologie:
   references:
     SZ:
@@ -1398,6 +1591,13 @@ begegnen:
   references:
     GA 29/30:
     - start: 397
+besinnliche Denken:
+  references:
+    SvG:
+    - start: 178
+    - start: 182
+  related:
+  - besinnliche Nachdenken
 besinnliche Nachdenken:
   references:
     GA 16:
@@ -1427,6 +1627,9 @@ der Mensch:
     - start: 6
     - start: 7
     - start: 10
+    SvG:
+    - start: 176
+    - start: 189
 der Wille:
   references:
     WD:
@@ -1482,11 +1685,17 @@ potentia:
     - start: 284
   related:
   - actualitas
+principium grande:
+  references:
+    SvG:
+    - start: 187
 principium magnum:
+  parent: principium rationis
   references:
     SvG:
     - start: 171
     - start: 172
+    - start: 176
   related:
   - Satz vom Grund
   - principium rationis
@@ -1495,31 +1704,65 @@ principium rationis:
     SvG:
     - start: 171
     - start: 172
+    - start: 173
+    - start: 176
+    - start: 177
+    - start: 188
   related:
   - Satz vom Grund
-principium rationisreddendum:
+principium reddendae rationis:
+  parent: principium rationis
   references:
     SvG:
     - start: 173
+    - start: 174
+    - start: 180
+      type: r
+principium reddendae rationis sufficientis:
+  parent: principium rationis
+  references:
+    SvG:
+    - start: 177
 ratio:
   references:
     SvG:
     - start: 173
+    - start: 174
     - start: 175
-ratio sufficiens:
+    - start: 176
+    - start: 189
+rechnen:
   references:
     SvG:
     - start: 175
+    - start: 176
+    - start: 177
+    - start: 189
 rechnende Denken:
   references:
     GA 16:
     - end: 520
       start: 519
     - start: 523
+    SvG:
+    - start: 178
+  related:
+  - rechnen
 reddendum:
   references:
     SvG:
+    - start: 173
     - start: 174
+    - start: 175
+  related:
+  - principium reddendae rationis
+sterben:
+  references:
+    SvG:
+    - start: 188
+sufficiens:
+  references:
+    SvG:
     - start: 175
 tiefe Langeweile:
   parent: Langeweile
@@ -1723,8 +1966,8 @@ unbestimmte Unmittelbare:
       start: 284
     - start: 293
     - start: 295
-    - start: 297
-      suffix: f
+    - end: 299
+      start: 297
 παράδειγμα:
   references:
     WBPh:
@@ -1832,6 +2075,7 @@ unbestimmte Unmittelbare:
       suffix: f
   related:
   - Physica
+  - Natur
 ψεύδεσθαι:
   references:
     GA 29/30:
@@ -1916,16 +2160,14 @@ unbestimmte Unmittelbare:
       suffix: f
   related:
   - εἶδος
-ὀσία:
-  references:
-    WBPh:
-    - start: 299
 ὁδός:
   references:
     WBPh:
     - end: 291
       start: 289
     - start: 295
+  related:
+  - μέθοδος
 ὑποκείμενον:
   references:
     WBPh:
