--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -606,20 +606,12 @@ Großrechenanlage:
 Grund:
   references:
     SvG:
-    - start: 171
-    - start: 172
-    - start: 173
-    - start: 174
-    - start: 175
-    - start: 176
-    - start: 181
-    - start: 183
-    - start: 182
-    - start: 184
-    - start: 186
-    - start: 187
-    - start: 188
-    - start: 189
+    - end: 176
+      start: 171
+    - end: 184
+      start: 181
+    - end: 189
+      start: 186
     WD:
     - end: 270
       start: 269
@@ -638,14 +630,11 @@ Grundriß:
 Grundsatz:
   references:
     SvG:
-    - start: 171
-    - start: 172
-    - start: 173
+    - end: 173
+      start: 171
     - start: 177
-    - start: 181
-    - start: 183
-    - start: 182
-    - start: 184
+    - end: 185
+      start: 181
     - start: 188
   related:
   - Satz vom Grund
@@ -1142,9 +1131,8 @@ Rätsel:
 Satz vom Grund:
   references:
     SvG:
-    - start: 171
-    - start: 172
-    - start: 173
+    - end: 173
+      start: 171
     - start: 175
     - start: 177
     - start: 178
@@ -1731,6 +1719,9 @@ ratio:
     - start: 175
     - start: 176
     - start: 189
+  related:
+  - Rechnen
+  - Rechenschaft
 rechnen:
   references:
     SvG:
