--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -334,6 +334,7 @@ Existenz:
   references:
     GA 29/30:
     - start: 257
+    - start: 13
 Farben:
   references:
     WBPh:
@@ -390,6 +391,10 @@ Fähigkeit:
   references:
     GA 29/30:
     - start: 489
+Ganze des Seienden:
+  references:
+    GA 29/30:
+    - start: 13
 Gebrochenheit des Daseins:
   references:
     GA 29/30:
@@ -521,6 +526,10 @@ Grundstimmung unseres Daseins:
     GA 29/30:
     - end: 409
       start: 408
+Grundverhalten:
+  references:
+    GA 29/30:
+    - start: 14
 Grundverhältnis:
   references:
     GA 29/30:
@@ -679,6 +688,10 @@ Leere im Ganzen:
   references:
     GA 29/30:
     - start: 251
+Letztes:
+  references:
+    GA 29/30:
+    - start: 3
 Lichtung:
   references:
     WD:
