--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -1,8 +1,15 @@
 Abgrund:
   references:
     WD:
-    - start: 269
-      suffix: f
+    - end: 270
+      start: 269
+    - start: 271
+    - start: 272
+    - start: 274
+Abwesen:
+  references:
+    WD:
+    - start: 271
 Alltäglichkeit:
   references:
     GA 29/30:
@@ -41,6 +48,8 @@ Anwesen:
   references:
     WBPh:
     - start: 281
+    WD:
+    - start: 271
 Aristoteles:
   references:
     GA 29/30:
@@ -326,6 +335,8 @@ Denken:
       suffix: ff
     GA 29/30:
     - start: 13
+    WD:
+    - start: 276
 Der Feldweg:
   references:
     GA 16:
@@ -336,10 +347,19 @@ Descartes, René:
     SvG:
     - start: 174
   type: p
+Dichten:
+  references:
+    WD:
+    - start: 276
 Dichter:
   references:
     SvG:
     - start: 185
+    WD:
+    - start: 271
+    - start: 272
+    - start: 273
+    - start: 274
 Dionysos:
   references:
     WD:
@@ -352,13 +372,17 @@ Driesch, Hans:
     - end: 381
       start: 380
   type: p
-Dürftiger Zeit:
+Duineser Elegien:
+  author: Rilke, Reiner Maria
   references:
     WD:
-    - start: 269
-      suffix: ff
-  related:
-  - Brod und Wein
+    - start: 274
+  type: w
+Duinesier Elegien:
+  references:
+    WD:
+    - start: 276
+    - start: 278
 Elemente:
   references:
     WBPh:
@@ -540,6 +564,8 @@ Gesang:
   references:
     WD:
     - start: 274
+    - start: 274
+    - start: 275
 Geschichte der Metaphysik:
   parent: Metaphysik
   references:
@@ -559,6 +585,8 @@ Geschick:
     WD:
     - start: 271
     - start: 272
+    - start: 273
+    - start: 274
     ZuS:
     - start: 12
       suffix: f
@@ -584,6 +612,10 @@ Glanz:
     WD:
     - start: 269
     - start: 270
+Gleiche:
+  references:
+    WD:
+    - start: 278
 Gleichgültigkeit:
   references:
     GA 29/30:
@@ -603,6 +635,9 @@ Gott:
     WD:
     - end: 270
       start: 269
+    - start: 271
+    - start: 274
+    - start: 275
 Großrechenanlage:
   references:
     SvG:
@@ -619,6 +654,7 @@ Grund:
     WD:
     - end: 270
       start: 269
+    - start: 278
 Grundriß:
   references:
     EWI:
@@ -695,6 +731,11 @@ Hegel, Georg Wilhelm Friedrich:
     WBPh:
     - start: 251
   type: p
+Heilige:
+  references:
+    WD:
+    - start: 272
+    - start: 274
 Heimat:
   references:
     GA 16:
@@ -744,6 +785,7 @@ Himmlischen:
   references:
     WD:
     - start: 270
+    - start: 271
 Hitler, Adolf:
   references:
     GA 42:
@@ -770,6 +812,9 @@ Hölderlin, Friedrich:
     - start: 269
     - end: 273
       start: 272
+    - start: 271
+    - start: 273
+    - start: 276
   type: p
 Inbegrif:
   references:
@@ -850,6 +895,8 @@ Leibniz, Gottfried Wilhelm:
     - start: 176
     - start: 182
     - start: 184
+    WD:
+    - start: 278
   related:
   - Satz vom Grund
   - principium rationis
@@ -863,6 +910,15 @@ Lichtung:
   references:
     WD:
     - start: 273
+Lichtung des Seins:
+  references:
+    WD:
+    - start: 273
+Liebe:
+  references:
+    WD:
+    - start: 274
+    - start: 275
 Logik:
   references:
     GA 29/30:
@@ -870,6 +926,10 @@ Logik:
       start: 418
     - end: 440
       start: 438
+Maas:
+  references:
+    WD:
+    - start: 273
 Maschine:
   references:
     EWI:
@@ -886,6 +946,15 @@ Meister Eckhart:
     GA 42:
     - start: 42
   type: p
+Mensch:
+  references:
+    GA 29/30:
+    - start: 6
+    - start: 7
+    - start: 10
+    SvG:
+    - start: 176
+    - start: 189
 Mensch qua Mensch:
   references:
     GA 29/30:
@@ -911,6 +980,10 @@ Metaphysik:
       start: 9
     SvG:
     - start: 184
+    WD:
+    - start: 273
+    - start: 275
+    - start: 276
 Miteinandersein:
   references:
     GA 29/30:
@@ -971,6 +1044,9 @@ Natur:
     - start: 298
     WD:
     - start: 277
+    - start: 277
+    - start: 278
+    - start: 279
     ZEG:
     - start: 60
   related:
@@ -979,6 +1055,8 @@ Naturwissenschaft:
   references:
     SvG:
     - start: 180
+    WD:
+    - start: 278
 Neuzeit:
   references:
     GA 16:
@@ -1026,6 +1104,10 @@ Offenbarkeit des Seienden im Ganze:
     - end: 413
       start: 412
     - start: 415
+Optimismus:
+  references:
+    WD:
+    - start: 271
 Otto Hahn:
   references:
     SvG:
@@ -1038,6 +1120,15 @@ Pascal, Blaise:
     SZ:
     - start: 4
   type: p
+Pessimismus:
+  references:
+    WD:
+    - start: 271
+Pflanze:
+  references:
+    WD:
+    - start: 277
+    - start: 278
 Philosophie:
   references:
     GA 29/30:
@@ -1132,7 +1223,8 @@ Rilke, Reiner Maria:
   references:
     WD:
     - start: 274
-      suffix: ff
+    - start: 275
+    - start: 277
   type: p
 Rádl, Emanuel:
   references:
@@ -1160,6 +1252,18 @@ Schein:
     WBPh:
     - start: 268
     - start: 269
+Schmertz:
+  references:
+    WD:
+    - start: 274
+Schmerz:
+  references:
+    WD:
+    - start: 275
+Seiende als solches:
+  references:
+    WD:
+    - start: 276
 Seiende im Ganzen:
   references:
     GA 29/30:
@@ -1168,7 +1272,9 @@ Seiende im Ganzen:
     - start: 238
     - start: 261
     WD:
+    - start: 276
     - start: 279
+    - start: 276
 Seiendheit:
   references:
     WBPh:
@@ -1211,6 +1317,17 @@ Seinsvergessenheit:
   references:
     WD:
     - start: 273
+Sonette an Orpheus:
+  references:
+    WD:
+    - start: 278
+Sonnette an Orpheus:
+  author: Rilke, Reiner Maria
+  references:
+    WD:
+    - start: 274
+    - start: 276
+  type: w
 Spemann, Hans:
   references:
     GA 29/30:
@@ -1240,6 +1357,7 @@ Sprache:
       suffix: f
     WD:
     - start: 274
+    - start: 274
 Sprachgeist:
   references:
     HH:
@@ -1249,6 +1367,9 @@ Spur:
     WD:
     - start: 271
     - start: 272
+    - start: 272
+    - start: 274
+    - start: 275
 Stanley, Wendell Meredith, 1904-1971:
   references:
     GA 16:
@@ -1265,6 +1386,9 @@ Sterblichen:
   references:
     WD:
     - start: 270
+    - start: 271
+    - start: 272
+    - start: 274
   related:
   - Himmlischen
 Stimmung:
@@ -1317,6 +1441,9 @@ Tier:
     - start: 412
     - end: 445
       start: 442
+    WD:
+    - start: 277
+    - start: 278
 Tod:
   references:
     EWI:
@@ -1326,6 +1453,9 @@ Tod:
       start: 425
     SvG:
     - start: 188
+    WD:
+    - start: 274
+    - start: 275
 Tranzendenz:
   references:
     GA 29/30:
@@ -1339,6 +1469,10 @@ Trieb:
       start: 7
     - start: 11
     - start: 33
+Ungesprochene:
+  references:
+    WD:
+    - start: 273
 Unheimlichkeit:
   references:
     GA 29/30:
@@ -1350,6 +1484,12 @@ Unverborgenheit:
     - start: 271
     - start: 287
       type: r
+    WD:
+    - start: 275
+Urgrund:
+  references:
+    WD:
+    - start: 277
 Ursache:
   references:
     SvG:
@@ -1463,10 +1603,14 @@ Welt:
       suffix: f
     - start: 442
       suffix: f
+    WD:
+    - start: 274
 Weltalter:
   references:
     WD:
     - start: 269
+    - start: 270
+    - start: 272
 Weltbildung:
   references:
     GA 29/30:
@@ -1481,6 +1625,9 @@ Weltnacht:
   references:
     WD:
     - start: 269
+    - start: 270
+    - start: 271
+    - start: 272
 Weltphänomen:
   references:
     GA 29/30:
@@ -1488,6 +1635,10 @@ Weltphänomen:
       suffix: f
     - start: 483
     - start: 483
+Weltzeit:
+  references:
+    WD:
+    - start: 269
 Wesen des Menschen:
   references:
     EWI:
@@ -1515,6 +1666,10 @@ Wie wenn am Feiertage...:
     WBPh:
     - start: 238
   type: w
+Wille:
+  references:
+    WD:
+    - start: 278
 Wissenschaft:
   references:
     GA 16:
@@ -1615,33 +1770,24 @@ bodenständig:
     GA 16:
     - start: 521
       suffix: f
-das Heilige:
-  references:
-    WD:
-    - start: 272
-das Ungesprochene:
-  references:
-    WD:
-    - start: 273
 der Feldberg:
   references:
     GA 55:
     - start: 335
     HH:
     - start: 134
-der Mensch:
-  references:
-    GA 29/30:
-    - start: 6
-    - start: 7
-    - start: 10
-    SvG:
-    - start: 176
-    - start: 189
-der Wille:
+dürftiger Zeit:
   references:
     WD:
-    - start: 278
+    - start: 272
+    - start: 269
+    - start: 270
+    - start: 271
+    - start: 273
+    - start: 274
+  related:
+  - Brod und Wein
+  - Dichter
 ex-sistent:
   references:
     WBPh:
@@ -1835,6 +1981,12 @@ unbestimmte Unmittelbare:
     - start: 299
   related:
   - Aussehen
+ζωή:
+  references:
+    WD:
+    - start: 278
+  related:
+  - ζῷον
 ζῷον:
   references:
     WBPh:
@@ -2080,8 +2232,8 @@ unbestimmte Unmittelbare:
     - end: 299
       start: 285
     WD:
-    - start: 278
-      suffix: f
+    - end: 278
+      start: 277
   related:
   - Physica
   - Natur
