--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -226,6 +226,12 @@ Beziehung zu Seiendem als Solchem:
     GA 29/30:
     - end: 368
       start: 367
+Bezug:
+  references:
+    WD:
+    - start: 282
+    - start: 283
+    - start: 285
 Blick der Entschlossenheit:
   references:
     GA 29/30:
@@ -480,12 +486,22 @@ Fragment 123 (Heraklit):
     WBPh:
     - start: 298
   type: w
+  related:
+  - φύσις
 Fragment 2 (Heraklit):
   author: Heraklit
   references:
     WBPh:
     - start: 277
   type: w
+Fragment 52 (Heraklit):
+  author: Heraklit
+  references:
+    WD:
+    - start: 280
+  type: w
+  related:
+  - Weltzeit
 Fragment 93 (Heraklit):
   author: Heraklit
   references:
@@ -515,6 +531,10 @@ Ganze des Seienden:
   references:
     GA 29/30:
     - start: 13
+    WD:
+    - start: 283
+  related:
+  - Seiende im Ganzen
 Gebrochenheit des Daseins:
   references:
     GA 29/30:
@@ -528,6 +548,9 @@ Gefahr:
   references:
     SvG:
     - start: 177
+    WD:
+    - start: 280
+    - start: 281
 Gegenstand:
   references:
     GA 16:
@@ -538,6 +561,8 @@ Gegenstand:
     - start: 176
     - start: 177
     - start: 182
+    WD:
+    - start: 283
 Gegnet:
   references:
     GA 55:
@@ -563,6 +588,7 @@ Gesang:
     - start: 274
     - start: 274
     - start: 275
+    - start: 285
 Geschichte der Metaphysik:
   parent: Metaphysik
   references:
@@ -652,6 +678,8 @@ Grund:
     - end: 270
       start: 269
     - start: 278
+    - start: 279
+    - start: 280
 Grundriß:
   references:
     EWI:
@@ -876,6 +904,13 @@ Langeweile:
     - end: 411
       start: 410
     - start: 487
+Leben:
+  references:
+    WD:
+    - start: 278
+      suffix: f
+    - start: 277
+    - start: 283
 Leere:
   references:
     GA 29/30:
@@ -894,6 +929,8 @@ Leibniz, Gottfried Wilhelm:
     - start: 184
     WD:
     - start: 278
+    - start: 279
+    - start: 285
   related:
   - Satz vom Grund
   - principium rationis
@@ -952,6 +989,9 @@ Mensch:
     SvG:
     - start: 176
     - start: 189
+    WD:
+    - start: 280
+    - start: 285
 Mensch qua Mensch:
   references:
     GA 29/30:
@@ -981,6 +1021,9 @@ Metaphysik:
     - start: 273
     - start: 275
     - start: 276
+    - start: 279
+    - start: 283
+    - start: 285
 Miteinandersein:
   references:
     GA 29/30:
@@ -1042,6 +1085,8 @@ Natur:
     WD:
     - end: 279
       start: 277
+    - start: 280
+    - start: 283
     ZEG:
     - start: 60
   related:
@@ -1099,6 +1144,12 @@ Offenbarkeit des Seienden im Ganze:
     - end: 413
       start: 412
     - start: 415
+Offene:
+  references:
+    WD:
+    - start: 277
+    - start: 284
+    - start: 285
 Optimismus:
   references:
     WD:
@@ -1220,6 +1271,9 @@ Rilke, Reiner Maria:
     - start: 274
     - start: 275
     - start: 277
+    - start: 279
+    - end: 285
+      start: 283
   type: p
 Rádl, Emanuel:
   references:
@@ -1255,6 +1309,19 @@ Schmerz:
   references:
     WD:
     - start: 275
+Schutz:
+  references:
+    WD:
+    - start: 277
+    - start: 280
+Schwerkraft:
+  references:
+    WD:
+    - start: 277
+    - start: 281
+    - start: 282
+    - start: 283
+    - start: 285
 Seiende als solches:
   references:
     WD:
@@ -1270,6 +1337,10 @@ Seiende im Ganzen:
     - start: 276
     - start: 279
     - start: 276
+    - start: 279
+    - start: 282
+    - start: 283
+    - start: 284
 Seiendheit:
   references:
     WBPh:
@@ -1320,6 +1391,7 @@ Sonette an Orpheus:
       suffix: f
     - start: 276
     - start: 278
+    - start: 282
   type: w
 Spemann, Hans:
   references:
@@ -1362,16 +1434,27 @@ Spur:
     - start: 272
     - start: 274
     - start: 275
+Späte Gedichte:
+  author: Rilke, Reiner Maria
+  references:
+    WD:
+    - end: 278
+      start: 276
+    - start: 282
+    - start: 285
+  type: w
 Stanley, Wendell Meredith, 1904-1971:
   references:
     GA 16:
     - start: 525
   type: p
-Sterben:
+sterben:
   references:
     WBPh:
     - start: 295
       suffix: f
+    SvG:
+    - start: 188
   related:
   - Sterblichen
 Sterblichen:
@@ -1436,6 +1519,7 @@ Tier:
     WD:
     - start: 277
     - start: 278
+    - start: 280
 Tod:
   references:
     EWI:
@@ -1478,6 +1562,7 @@ Unverborgenheit:
       type: r
     WD:
     - start: 275
+    - start: 284
 Urgrund:
   references:
     WD:
@@ -1563,6 +1648,13 @@ Wachsen:
   references:
     WBPh:
     - start: 287
+Wagnis:
+  references:
+    WD:
+    - start: 277
+    - start: 281
+    - start: 283
+    - start: 284
 Wahrheit:
   references:
     SvG:
@@ -1629,6 +1721,7 @@ Weltzeit:
   references:
     WD:
     - start: 269
+    - start: 280
 Wesen des Menschen:
   references:
     EWI:
@@ -1660,6 +1753,8 @@ Wille:
   references:
     WD:
     - start: 278
+    - start: 279
+      suffix: f
 Wissenschaft:
   references:
     GA 16:
@@ -1895,10 +1990,6 @@ reddendum:
     - start: 175
   related:
   - principium reddendae rationis
-sterben:
-  references:
-    SvG:
-    - start: 188
 sufficiens:
   references:
     SvG:
