--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -1,5 +1,10 @@
 Abgrund:
   references:
+    SvG:
+    - start: 165
+    - start: 166
+    - start: 167
+    - start: 169
     WD:
     - end: 270
       start: 269
@@ -16,6 +21,11 @@ Alltäglichkeit:
     - end: 400
       start: 398
     - start: 405
+Anaximander:
+  references:
+    SvG:
+    - start: 158
+  type: p
 Anspruch:
   references:
     GA 29/30:
@@ -35,6 +45,11 @@ Anthropologie:
     GA 29/30:
     - start: 406
     - start: 408
+Antigonä:
+  references:
+    SvG:
+    - start: 15
+  type: p
 Antiphon:
   references:
     WBPh:
@@ -46,6 +61,9 @@ Antiphon:
   type: p
 Anwesen:
   references:
+    SvG:
+    - start: 159
+    - start: 161
     WBPh:
     - start: 281
     WD:
@@ -72,6 +90,8 @@ Aristoteles:
       suffix: f
     SZ:
     - start: 3
+    SvG:
+    - start: 158
     WBPh:
     - start: 237
       suffix: ff
@@ -286,6 +306,8 @@ Dasein:
       start: 425
     - end: 433
       start: 432
+    SvG:
+    - start: 167
 Dasein des Menschen:
   parent: Dasein
   references:
@@ -344,6 +366,10 @@ Denken:
     - start: 13
     WD:
     - start: 276
+Denkweg:
+  references:
+    SvG:
+    - start: 168
 Der Feldweg:
   references:
     G:
@@ -422,6 +448,11 @@ Entschlossenheit:
   references:
     GA 29/30:
     - start: 251
+Entzug:
+  references:
+    SvG:
+    - start: 164
+    - start: 165
 Erde:
   references:
     SvG:
@@ -495,9 +526,15 @@ Fragment 2 (Heraklit):
     WBPh:
     - start: 277
   type: w
+Fragment 30 (Heraklit):
+  references:
+    SvG:
+    - start: 168
 Fragment 52 (Heraklit):
   author: Heraklit
   references:
+    SvG:
+    - start: 168
     WD:
     - start: 280
   related:
@@ -562,6 +599,7 @@ Gegenstand:
     - start: 176
     - start: 177
     - start: 182
+    - start: 164
     WD:
     - start: 283
 Gegnet:
@@ -574,6 +612,9 @@ Geheimnis:
   references:
     GA 29/30:
     - start: 255
+    SvG:
+    - start: 167
+    - start: 169
 Geist:
   references:
     WBPh:
@@ -603,6 +644,9 @@ Geschick:
       suffix: ff
     SZ:
     - start: 384
+    SvG:
+    - start: 163
+    - start: 169
     VA:
     - start: 25
       suffix: ff
@@ -614,6 +658,12 @@ Geschick:
     ZuS:
     - start: 12
       suffix: f
+Geschick des Seins:
+  parent: Geschick
+  references:
+    SvG:
+    - start: 153
+    - start: 156
 Gestellung in das Aussehen:
   parent: Aussehen
   references:
@@ -656,6 +706,8 @@ Gott:
   references:
     GA 29/30:
     - start: 262
+    SvG:
+    - start: 167
     WD:
     - end: 270
       start: 269
@@ -675,6 +727,20 @@ Grund:
       start: 181
     - end: 189
       start: 186
+    - start: 153
+    - start: 155
+    - start: 156
+    - start: 159
+    - start: 161
+    - start: 162
+    - start: 163
+    - start: 164
+    - start: 164
+    - start: 165
+    - start: 166
+    - start: 167
+    - start: 168
+    - start: 169
     WD:
     - end: 270
       start: 269
@@ -781,6 +847,11 @@ Herakles:
   type: p
 Heraklit:
   references:
+    SvG:
+    - start: 161
+    - start: 163
+    - start: 168
+    - start: 169
     WBPh:
     - start: 277
     - start: 298
@@ -832,6 +903,8 @@ Humboldt, Alexander von:
   type: p
 Hölderlin, Friedrich:
   references:
+    SvG:
+    - start: 154
     WBPh:
     - start: 238
     WD:
@@ -850,6 +923,12 @@ Information:
   references:
     SvG:
     - start: 182
+Kalkül:
+  references:
+    SvG:
+    - start: 154
+    - start: 155
+    - start: 167
 Kant und das Problem der Metaphysik:
   references:
     GA 29/30:
@@ -880,6 +959,10 @@ Kierkegaard, Søren:
     - end: 43
       start: 42
   type: p
+Kind:
+  references:
+    SvG:
+    - start: 168
 Kreutzer, Conradin:
   references:
     G:
@@ -976,6 +1059,15 @@ Materialismus:
     SvG:
     - start: 179
     - start: 180
+Maß:
+  references:
+    SvG:
+    - start: 166
+Maßgabe:
+  references:
+    SvG:
+    - start: 166
+    - start: 167
 Meister Eckhart:
   references:
     GA 42:
@@ -990,6 +1082,7 @@ Mensch:
     SvG:
     - start: 176
     - start: 189
+    - start: 167
     WD:
     - start: 280
     - start: 285
@@ -1104,6 +1197,7 @@ Neuzeit:
     - start: 523
     SvG:
     - start: 177
+    - start: 153
 Nichts:
   references:
     GA 29/30:
@@ -1248,6 +1342,9 @@ Prinzip:
   references:
     SvG:
     - start: 174
+    - start: 163
+    - start: 164
+    - start: 165
   related:
   - Axiom
   - Grundsatz
@@ -1261,6 +1358,15 @@ Rechenschaft:
     - start: 175
     - start: 176
     - start: 189
+    - start: 162
+Rechnung:
+  references:
+    SvG:
+    - start: 153
+    - start: 155
+    - start: 156
+    - start: 157
+    - start: 168
 Reizbarkeit:
   references:
     GA 29/30:
@@ -1297,6 +1403,11 @@ Satz vom Grund:
     - start: 184
     - start: 187
     - start: 188
+    - start: 153
+    - start: 156
+    - start: 158
+    - start: 160
+    - start: 168
 Schein:
   references:
     WBPh:
@@ -1378,9 +1489,17 @@ Seinsblinden:
     - start: 262
 Seinsgeschichte:
   references:
+    SvG:
+    - start: 155
+    - start: 164
     WD:
     - start: 273
       suffix: f
+Seinsgeschick:
+  references:
+    SvG:
+    - start: 158
+    - start: 168
 Seinsvergessenheit:
   references:
     WD:
@@ -1395,11 +1514,21 @@ Sonette an Orpheus:
     - start: 278
     - start: 282
   type: w
+Sophokles:
+  references:
+    SvG:
+    - start: 154
 Spemann, Hans:
   references:
     GA 29/30:
     - start: 381
   type: p
+Spiel:
+  references:
+    SvG:
+    - start: 167
+    - start: 168
+    - start: 169
 Spiel mit der Sprache:
   references:
     GA 29/30:
@@ -1429,6 +1558,10 @@ Sprachgeist:
   references:
     HH:
     - start: 135
+Sprung:
+  references:
+    SvG:
+    - start: 166
 Spur:
   references:
     WD:
@@ -1452,6 +1585,8 @@ Stanley, Wendell Meredith, 1904-1971:
   type: p
 Sterblichen:
   references:
+    SvG:
+    - start: 167
     WD:
     - start: 270
     - start: 271
@@ -1522,9 +1657,14 @@ Tod:
       start: 425
     SvG:
     - start: 188
+    - start: 167
     WD:
     - start: 274
     - start: 275
+Tonart:
+  references:
+    SvG:
+    - start: 166
 Tranzendenz:
   references:
     GA 29/30:
@@ -1548,6 +1688,8 @@ Unheimlichkeit:
     - start: 490
 Unverborgenheit:
   references:
+    SvG:
+    - start: 159
     WBPh:
     - start: 268
     - start: 271
@@ -1565,6 +1707,8 @@ Ursache:
     SvG:
     - start: 171
     - start: 172
+    - start: 164
+    - start: 165
 Urteil:
   references:
     SvG:
@@ -1602,6 +1746,12 @@ Vernunft:
   references:
     SvG:
     - start: 176
+    - start: 155
+    - start: 156
+    - start: 157
+    - start: 162
+    - start: 165
+    - start: 168
 Verwahrlosung:
   references:
     EWI:
@@ -1637,6 +1787,8 @@ Vorstellen:
     - start: 177
     - start: 183
     - start: 188
+    - start: 156
+    - start: 162
 Wachsen:
   references:
     WBPh:
@@ -1657,6 +1809,7 @@ Warum:
     SvG:
     - start: 185
     - start: 186
+    - start: 169
   related:
   - Weil
 Weil:
@@ -1698,6 +1851,7 @@ Weltgeschichte:
   references:
     SvG:
     - start: 180
+    - start: 157
 Weltnacht:
   references:
     WD:
@@ -1785,6 +1939,10 @@ Zuspruch:
     - start: 183
     - start: 187
     - start: 188
+Zwiesel:
+  references:
+    SvG:
+    - start: 155
 actualitas:
   references:
     WBPh:
@@ -1848,6 +2006,10 @@ bodenständig:
     G:
     - start: 521
       suffix: f
+causa:
+  references:
+    SvG:
+    - start: 165
 der Feldberg:
   references:
     GA 55:
@@ -1962,6 +2124,16 @@ ratio:
     - start: 175
     - start: 176
     - start: 189
+    - start: 153
+    - start: 155
+    - start: 156
+    - start: 157
+    - start: 158
+    - start: 160
+    - start: 162
+    - start: 163
+    - start: 165
+    - start: 168
   related:
   - rechnen
   - Rechenschaft
@@ -1988,6 +2160,7 @@ reddendum:
     - start: 173
     - start: 174
     - start: 175
+    - start: 155
   related:
   - principium reddendae rationis
 sterben:
@@ -2015,12 +2188,28 @@ unbestimmte Unmittelbare:
   references:
     SZ:
     - start: 3
+weil:
+  references:
+    SvG:
+    - start: 169
+Ödipus:
+  references:
+    SvG:
+    - start: 154
+  type: p
 αἰτία:
   references:
     FT:
     - start: 12
+    SvG:
+    - start: 165
     WBPh:
     - start: 243
+αἰών:
+  references:
+    SvG:
+    - start: 168
+    - start: 169
 γεν:
   references:
     WBPh:
@@ -2130,8 +2319,15 @@ unbestimmte Unmittelbare:
     - start: 295
     - start: 296
     - start: 299
+κόσμος:
+  references:
+    SvG:
+    - start: 168
 λέγειν:
   references:
+    SvG:
+    - start: 160
+    - start: 161
     WBPh:
     - end: 278
       start: 276
@@ -2152,6 +2348,17 @@ unbestimmte Unmittelbare:
       start: 484
     - end: 491
       start: 487
+    SvG:
+    - start: 158
+    - start: 159
+    - start: 160
+    - start: 161
+    - start: 162
+    - start: 163
+    - start: 164
+    - start: 165
+    - start: 166
+    - start: 168
     WBPh:
     - start: 251
     - start: 273
@@ -2197,6 +2404,8 @@ unbestimmte Unmittelbare:
     - start: 269
 οὐσία:
   references:
+    SvG:
+    - start: 157
     WBPh:
     - start: 257
       suffix: f
@@ -2302,6 +2511,10 @@ unbestimmte Unmittelbare:
       suffix: ff
     HH:
     - start: 145
+    SvG:
+    - start: 157
+    - start: 163
+    - start: 168
     WBPh:
     - start: 237
     - start: 239
@@ -2362,6 +2575,10 @@ unbestimmte Unmittelbare:
   - φύσις
 ἀρχή:
   references:
+    SvG:
+    - start: 163
+    - start: 165
+    - start: 168
     WBPh:
     - start: 244
       suffix: ff
